{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 34,
  "lineage": "23cc3b6a-d21e-7886-5517-c3b2444958dd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184112502:vpc/vpc-05cc38ae027e8b966",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0def84ae211dcbd8f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0cd91a7e3898d4b78",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05cc38ae027e8b966",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02dee8d94091ae270",
            "owner_id": "590184112502",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fileserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b9755dd9758b73ce",
            "arn": "arn:aws:ec2:us-east-1:590184112502:instance/i-06f8630562d494076",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f8630562d494076",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04f63e96cd4cce990"
              }
            ],
            "primary_network_interface_id": "eni-04f63e96cd4cce990",
            "private_dns": "ip-172-31-24-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.21",
            "public_dns": "ec2-54-147-16-7.compute-1.amazonaws.com",
            "public_ip": "54.147.16.7",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eed6b084b47c63e0",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "entrega2-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04daa9e1fd19e7c87",
            "tags": {
              "Name": "entrega2-fileserver",
              "Role": "fileserver"
            },
            "tags_all": {
              "Name": "entrega2-fileserver",
              "Role": "fileserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dafd4ef36b50bf1f"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_ami.amazon_linux_2",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b9755dd9758b73ce",
            "arn": "arn:aws:ec2:us-east-1:590184112502:instance/i-0d447b295178d47ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d447b295178d47ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b54f5ff3f901ed8b"
              }
            ],
            "primary_network_interface_id": "eni-0b54f5ff3f901ed8b",
            "private_dns": "ip-172-31-23-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.12",
            "public_dns": "ec2-34-228-161-186.compute-1.amazonaws.com",
            "public_ip": "34.228.161.186",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f6c0d82ba13f9e22",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "entrega2-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04daa9e1fd19e7c87",
            "tags": {
              "Name": "entrega2-web",
              "Role": "web"
            },
            "tags_all": {
              "Name": "entrega2-web",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dafd4ef36b50bf1f"
            ]
          },
          "dependencies": [
            "aws_instance.fileserver",
            "aws_security_group.ec2_sg",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b9755dd9758b73ce",
            "arn": "arn:aws:ec2:us-east-1:590184112502:instance/i-01ec81491b8430111",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ec81491b8430111",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01c7c362ab4d116c1"
              }
            ],
            "primary_network_interface_id": "eni-01c7c362ab4d116c1",
            "private_dns": "ip-172-31-24-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.91",
            "public_dns": "ec2-18-209-22-32.compute-1.amazonaws.com",
            "public_ip": "18.209.22.32",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0605620713dcf7363",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "entrega2-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04daa9e1fd19e7c87",
            "tags": {
              "Name": "entrega2-worker",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "entrega2-worker",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dafd4ef36b50bf1f"
            ]
          },
          "dependencies": [
            "aws_instance.fileserver",
            "aws_security_group.ec2_sg",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184112502:security-group/sg-0dafd4ef36b50bf1f",
            "description": "Security group for EC2 instances (web/worker/fileserver) - default VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dafd4ef36b50bf1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "NFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2049
              }
            ],
            "name": "entrega2-ec2-sg",
            "name_prefix": "",
            "owner_id": "590184112502",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "entrega2-ec2-sg"
            },
            "tags_all": {
              "Name": "entrega2-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cc38ae027e8b966"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184112502:security-group/sg-041bc2674cb22b3b1",
            "description": "Security group for RDS postgres",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041bc2674cb22b3b1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from EC2 SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dafd4ef36b50bf1f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "entrega2-rds-sg",
            "name_prefix": "",
            "owner_id": "590184112502",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "entrega2-rds-sg"
            },
            "tags_all": {
              "Name": "entrega2-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cc38ae027e8b966"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}